--- a/Mean_Field_backup.ipynb
+++ b/Mean_Field_backup.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -153,13 +153,16 @@
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
     "        return 1\n",
     "    \n",
-    "    def H_l_u(self, q_s, p_l):\n",
+    "    def H_l_u_1(self, q_s, p_s):\n",
+    "        return 1\n",
+    "    \n",
+    "    def H_l_u_2(self, q_s, p_s):\n",
     "        return 1\n",
     "    \n",
     "    def H_l(self, q_s, p_l, lambda_l, u_s):\n",
     "        # used in \"Construct local Hamiltonian of agent i\"\n",
     "        H_l = self.H_l_nou(q_s, p_l, lambda_l)\n",
-    "        H_l = H_l + self.H_l_u_1(q_s, p_s)*u_s[0]+ self.H_l_u_2(q_s, p_s)*u_s[1]\n",
+    "        H_l = H_l + self.H_l_u_1(q_s, p_l)*u_s[0] #+ self.H_l_u_2(q_s, p_l)*u_s[1]\n",
     "        return H_l\n",
     "            \n",
     "    def compute_lambdas(self, q_s, p_l, u_l):\n",
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true
    },
@@ -339,7 +342,7 @@
     "    def H_l(self, q_s, p_l, lambda_l, u_s):\n",
     "        # used in \"Construct local Hamiltonian of agent i\"\n",
     "        H_l = self.H_l_nou(q_s, p_l, lambda_l)\n",
-    "        H_l = H_l + self.H_l_u_1(q_s, p_s)*u_s[0]+ self.H_l_u_2(q_s, p_s)*u_s[1]\n",
+    "        H_l = H_l + self.H_l_u(q_s, p_l)*u_s[0]\n",
     "        return H_l\n",
     "            \n",
     "    def compute_lambdas(self, q_s, p_l, u_l):\n",
@@ -443,30 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "only 5 should be the resulting set\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=[3,5,2]\n",
-    "b=[2]\n",
-    "g=[a,b]\n",
-    "set([x for g_i in g for x in g_i]) - set([3,3,3,2,4])\n",
-    "print 'only 5 should be the resulting set'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -531,40 +511,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "should L_mf_q_dot live in the synchronizer?  if not, then where should it live?\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\none option is for each of the sliding_window_instances to have an attribute called \"synchronizer\", which holds the synchronizer\\nobject that runs all of this.  \\nThen, \\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print 'should L_mf_q_dot live in the synchronizer?  if not, then where should it live?'\n",
-    "'''\n",
-    "one option is for each of the sliding_window_instances to have an attribute called \"synchronizer\", which holds the synchronizer\n",
-    "object that runs all of this.  \n",
-    "Then, \n",
-    "'''"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -573,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -611,11 +557,6 @@
     "        for control_ix in agent.control_indices:\n",
     "            self.q_p_u_dict['u_s'][str(control_ix)] = agent.qpu_vec[3*agent.state_dim:][control_ix-1]\n",
     "        \n",
-    "        # update sensor values \"q_l, q_l_dot, u_s\"\n",
-    "#         self.q_p_u_dict['q_1'] = [] unnecessary because identical to q_s\n",
-    "#         self.q_p_u_dict['q_1_dot'] = []  # numerically estimated, or available from sensors\n",
-    "#         self.q_p_u_dict['u_s'] = []  # unnecessary because same as \"u_s\" above\n",
-    "        \n",
     "        # add agent if not already added \n",
     "        if agent not in self.agents:\n",
     "            self.agents.append(agent)\n"
@@ -633,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -648,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -659,7 +600,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -682,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
@@ -693,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 164,
    "metadata": {
     "collapsed": false
    },
@@ -708,7 +649,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -733,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -767,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -779,7 +720,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-167-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
      ]
     }
@@ -790,16 +731,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# forgot to pass in 'u_s' as a keyword argument\n",
     "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
     "# forgot to pass in 'u_s' as a keyword argument\n",
-    "# qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
+    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
    ]
   },
   {
@@ -815,11 +755,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n",
+      "[ 0.         21.16546289  0.          0.40596919  0.         20.16546289\n",
+      "  0.        ] [0.         7.15453179] [0.        1.1035885] [0.         6.15453179] [0.] [array([0.        , 7.15453179])] [array([0.       , 1.1035885])] [array([0.        , 6.15453179])] [array([0.])]\n"
+     ]
+    }
+   ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
     "\n",
@@ -845,18 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# write helper function to take in sliding window, and q_p_u_dict, and return the q_s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -884,26 +823,24 @@
     "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
     "    '''\n",
     "    \n",
-    "#     sliding_window_instance.compute_gamma()\n",
     "    t_0, T, K, state_dim,t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K,  sliding_window_instance.state_dim, sliding_window_instance.t_terminal\n",
     "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
     "    t = t_0 # wall clock time\n",
-    "    # qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    \n",
     "    # Read from blackboard to get the following observation measured at time t_0\n",
-    "    q_p_u_dict = sliding_window_instance.bb.q_p_u_dict\n",
-    "    q_mf = q_p_u_dict['q_s']\n",
-    "    q_mf_dot = q_p_u_dict['q_s_dot'] \n",
-    "    u_mf_0 = q_p_u_dict['u_s'] \n",
+    "    q_mf, q_mf_dot, u_mf = get_blackboard_values(sliding_window_instance)\n",
     "    \n",
     "    # now pick out the individual states that we need to make q_s and q_s_dot\n",
     "    qpu_vec = sliding_window_instance.qpu_vec\n",
     "    state_dim = sliding_window_instance.state_dim\n",
-    "    q_s = qpu_vec[:state_dim]\n",
     "    # a note on q_s_dot - normally I understand that this would come from the sensors, ...\n",
     "    # ...but for now get it from q_mf_dot from the blackboard, and just select if from the states that pertain to this agent\n",
-    "    q_s_dot_0 = filter(lambda item: int(item[0]) in sliding_window_instance.state_indices, [item[1] for item in q_mf_dot.items()])\n",
-    "    u_s_0 = qpu_vec[3*state_dim:]\n",
+    "    q_s_0 = np.array([q_mf[sliding_window_instance.state_indices[state_ix-1]-1] for state_ix in sliding_window_instance.state_indices])\n",
+    "    q_s_dot_0 = np.array([q_mf_dot[sliding_window_instance.state_indices[state_ix-1]-1] for state_ix in sliding_window_instance.state_indices])\n",
+    "    u_s_0 = np.array([u_mf[sliding_window_instance.control_indices[control_ix-1]-1] for control_ix in sliding_window_instance.control_indices])\n",
+    "    \n",
+    "    # construct quenched mean field for Hamiltonian agent i\n",
+    "    # this happens inside of the class Synchronize method\n",
     "    \n",
     "    # If control is physical, then we should use the physical value here for initial condition\n",
     "    # IF not, then we can use the average u, averaged over the previous window.\n",
@@ -918,15 +855,14 @@
     "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
     "    \n",
     "    # Construct local Hamiltonian of agent i\n",
-    "    lambdas = compute_lambdas(self, q_s, p_l, u_l)\n",
-    "    H_l = sliding_window_instance.H_l(q_s, p_l, lambda_l, u_s)\n",
+    "    lambdas = sliding_window_instance.compute_lambdas(q_s_0, p_l_0, u_s_0)\n",
+    "    H_l = sliding_window_instance.H_l(q_s_0, p_l_0, lambdas[0], u_s_0)\n",
     "    H_mf = sliding_window\n",
-    "#     L_mf = \n",
-    "    # p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
+    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
     "    \n",
     "    # fill in qpu_vec with values from the blackboard, and then assign them to attribute sliding_window_instance\n",
     "    sliding_window_instance.qpu_vec = np.hstack([q_s_0, p_l_0, p_mf_0, u_s_0])\n",
-    "    \n",
+    "    t_terminal = 10\n",
     "    while t < t_terminal:\n",
     "        \n",
     "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance\n",
@@ -941,7 +877,8 @@
     "        p_ls_bars.append(p_ls_bar)\n",
     "        p_mfs_bars.append(p_mfs_bar)\n",
     "        u_bars.append(u_bar)\n",
-    "    \n",
+    "\n",
+    "        t+=1\n",
     "    # update blackboard\n",
     "    bb.update_q_p_u_dict(sliding_window_instance)\n",
     "    \n",
@@ -950,12 +887,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sync = Synchronizer(agents, bb)\n",
+    "sync.synchronize()"
+   ]
   },
   {
    "cell_type": "code",
